Bug 188177 - configure/video comboboxes are enabled even if there isn't any webcam
Summary: configure/video comboboxes are enabled even if there isn't any webcam
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Audio/Video Plugin (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-26 17:53 UTC by Davide Bettio
Modified: 2010-01-16 13:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
configuration/video when webcam is missing (70.33 KB, image/png)
2009-03-26 17:57 UTC, Davide Bettio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Bettio 2009-03-26 17:53:31 UTC
Version:            (using Devel)
Compiler:          gcc 4.1.2 gcc (GCC) 4.1.2 (Gentoo 4.1.2 p1.3)
OS:                Linux
Installed from:    Compiled sources

configure/video comboboxes are enabled even if there isn't any webcam.
If there isn't any webcam available, comboboxes (and eventually other widgets) should be disabled.
Comment 1 Davide Bettio 2009-03-26 17:57:08 UTC
Created attachment 32415 [details]
configuration/video when webcam is missing
Comment 2 Alex Merry 2010-01-16 13:07:28 UTC
Fixed by r1072632, r1075597 (trunk) and r1075269, r1075270 (4.4).