Video-settings-dialog: disable comboboxes if no device available

BUG: 188177

svn path=/branches/KDE/4.4/kdenetwork/kopete/; revision=1075269