libkopete/avdevice/videodevicepool.cpp
@@ -528,8 +528,10 @@ int VideoDevicePool::fillDeviceKComboBox(KComboBox *combobox)
 				kDebug() << "Added device " << loop << ": " << m_videodevice[loop].m_name;
 			}
 			combobox->setCurrentIndex(currentDevice());
+			combobox->setEnabled(true);
 			return EXIT_SUCCESS;
 		}
+		combobox->setEnabled(false);
 	}
 	return EXIT_FAILURE;
 }
@@ -554,9 +556,11 @@ int VideoDevicePool::fillInputKComboBox(KComboBox *combobox)
 					kDebug() << "Added input " << loop << ": " << m_videodevice[currentDevice()].m_input[loop].name << " (tuner: " << m_videodevice[currentDevice()].m_input[loop].hastuner << ")";
 				}
 				combobox->setCurrentIndex(currentInput());
+				combobox->setEnabled(true);
 				return EXIT_SUCCESS;
 			}
 		}
+		combobox->setEnabled(false);
 	}
 	return EXIT_FAILURE;
 }
@@ -618,9 +622,11 @@ int VideoDevicePool::fillStandardKComboBox(KComboBox *combobox)
 				kDebug() << "StandardKCombobox: Added input " << loop << ": " << m_videodevice[currentDevice()].m_input[loop].name << " (tuner: " << m_videodevice[currentDevice()].m_input[loop].hastuner << ")";*/
 				}
 				combobox->setCurrentIndex(currentInput());
+				combobox->setEnabled(combobox->count());
 				return EXIT_SUCCESS;
 			}
 		}
+		combobox->setEnabled(false);
 	}
 	return EXIT_FAILURE;
 }
